style.scss
@import url('https://fonts.googleapis.com/css?family=Montserrat:500,700');

$bg-color: #111111;
$fg-color: #ffffff;

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

html {
	max-width: 100vw;
	max-height: 100vh;
}

body {
	font-family: 'Montserrat', sans-serif;
	font-weight: 500;
	background-color: $bg-color;
}

button {
	font-family: 'Montserrat', sans-serif;
}

.wrapper {
	position: relative;
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100vh;
	/* min-width: 100vh; */
	color: $fg-color;
	overflow: hidden;
}

.container {
	display: flex;
	width: 80%;
	z-index: 3;
}

#image {
	display: block;
	position: absolute;
	top: 50%;
	left: 27.5%;
	max-height: 66.66%;
	max-width: 33.33%;
	transform: translateY(-45%);
	opacity: 1;
	z-index: 2;
	transition: all 1000ms ease-in-out;

	&.faded {
		opacity: 0;
		transform: translateY(-33.33%);
	}
}

.col-left, .col-right {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
	padding: 2.5%;
	width: 95%;
}

.col-left {
	text-align: right;
}

.col-right {
	text-align: left;
}

#clock {
	font-size: 2.5rem;
	margin-bottom: 0.5rem;
	letter-spacing: 2px;
	line-height: 1;
}

#weather-description {
	text-transform: capitalize;
	color: darken($fg-color, 25%);
	padding-top: 0.25rem;
}

#weather-temp {
	font-weight: 700;
	padding-bottom: 0.25rem;
}

.links-list {
	display: block;
	list-style-type: none;
	margin-bottom: 1rem;
	transform: translateX(0);
	opacity: 1;
	transition: all 250ms ease-in-out;

	&.loading {
		opacity: 0;
		transform: translateX(25%);
	}

	&::last-of-type {
		margin-bottom: 0;
	}

	.heading {
		letter-spacing: 1px;
		font-size: 1.25rem;
		font-weight: 700;
	}

	li {
		background-color: $bg-color;

		a {
			display: inline-block;
			text-decoration: none;
			color: darken($fg-color, 20%);
			
			&:hover {
				color: $fg-color;
			}
		}
	}
}

#clock, #weather-description, #weather-temp {
	position: relative;

	&:before {
		content: " ";
		display: block;
		position: absolute;
		height: 100%;
		width: 0;
		top: 0;
		right: 0;
		background-color: transparentize($fg-color, 1);
		transition: all 500ms ease-in-out;
	}

	&.loading:before {
		width: 100%;
		background-color: $fg-color;
	}
}

/* Settings */
.btn {
	font-weight: 700;
	background: transparent;
	color: $bg-color;
	font-size: 1.5rem;
	border: 0;
	padding: 1rem;
	cursor: pointer;

	&:hover {
		color: lighten($bg-color, 25%);
	}

	&:focus {
		outline: none;
	}
}

#btn-settings {
	position: absolute;
	top: 0;
	right: 0;
	color: transparentize($fg-color, 0.75);

	&:hover {
		color: transparentize($fg-color, 0)
	}
}

#btn-settings-close {
	position: absolute;
	top: 0;
	right: 0;
}

#btn-settings-save {
	color: green;
	border-bottom: 3px solid transparent;

	&:hover {
		border-color: green;
	}
}

/* Settings Page itself */
#settings-page {
	position: absolute;
	top: 0;
	right: 100%;
	width: 100%;
	height: 100%;
	background-color: $fg-color;
	color: $bg-color;
	z-index: 4;
	transition: all 500ms ease-in-out;

	/* Open styling */
	&.open {
		right: 0;
	}

	h1 {
		margin-bottom: 2rem;
	}

	.form-heading {
		margin-bottom: 1.25rem;
	}

	hr {
		width: 60%;
		height: 3px;
		background-color: darken($fg-color, 5%);
		margin: 2rem auto;
		border: 0;
	}

	.settings {
		max-width: 600px;
		margin: 10% auto 0 auto;
	}
}

.form-group {
	margin-bottom: 1rem;

	&:last-of-type {
		margin-bottom: 0;
	}

	label {
		display: block;
		font-weight: 700;
		font-size: 0.875rem;
		margin-bottom: 0.25rem;
	}

	input.form-control {
		width: 100%;
		font-size: 1rem;
		padding: 0.5rem;
		background-color: darken($fg-color, 5%);
		border: 0;
		border-bottom: 3px solid darken($fg-color, 10%);
		font-family: 'Montserrat', sans-serif;

		&:active, &:focus {
			outline: none;
		}
	}
}

/* Responsive stuff */
@media screen and (max-width: 600px) {
	.wrapper {
		align-items: flex-start;
	}

  .col-left {
		text-align: center;
		margin-top: 20%;
	}

	.col-right {
		display: none;
	}

  #image {
  	max-width: 80%;
  	max-height: 80%;
  	top: 65%;
  	left: 10%;
	}
	
	#clock {
		font-size: 5rem;
		margin-bottom: 1rem;
	}

	#weather-temp, #weather-description {
		font-size: 2rem;
	}
}

